Fixed about card spacing and other formatting

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
     margin: 0 0; */
 }
 
+#root {
+    overflow: hidden;
+    background-color: #f5f5f5;
+}
+
 html {
     padding: 0 0;
     margin: 0 0;
@@ -47,21 +52,23 @@ body {
 main {
     /* padding-top:80px;  */
     margin: 0 0;
-    margin-bottom:-50px;
-    height:100vh;
+    margin-bottom:0px;
+    height:90vh;
+    overflow:hidden;
 }
 
 .App {
   /* padding: 10vw;
   padding-block: 2vh; */
   /* display:inline-block; */
-  position:relative;
+  position:fixed;
   width:100%;
-  height:minmax(100vh, 200vh);
+  height:100vh;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0;
   padding:0 0;
   background-color: #f5f5f5;
+  overflow:hidden;
 }
 
 .App--dark {
