--- a/src/components/about-card/AboutCard.css
+++ b/src/components/about-card/AboutCard.css
@@ -1,3 +1,8 @@
+.about-box {
+    height:calc(100vh - 30px);
+    overflow:auto;
+}
+
 .about-card {
     display:flex;
     
@@ -5,13 +10,14 @@
     width:50vw;
     max-width: 400px;
     align-items:center;
+    margin:0 auto;
     flex-shrink:initial;
-    margin:40px auto;
     background-color:#F5F5F5;
+
+    height:150vh;
     
-    padding-top:80px;
+    padding-top:20px;
     border-radius: 20px;
-    overflow:hidden;
     font-family: Inter;
 }
 
