--- a/src/components/entry/Entry.css
+++ b/src/components/entry/Entry.css
@@ -8,8 +8,8 @@
     display:flex;
     flex-direction:row;
     max-width:90vw;
-    margin:0 0 10px 0vw;
-    padding:20px 0vw 0 0;
+    margin:0 0 0px 0vw;
+    padding:0px 0vw 0 0;
     background-color: #f7f7f700;
     /* background-color: #F9F7F0; */
     font-family:Inter;
@@ -52,7 +52,7 @@
     flex-direction:column;
     margin: 10px 0vw 10px 0vw;
     font-weight:700;
-    font-size:1.5rem;
+    font-size:1.2rem;
     list-style:none;
 }
 
@@ -92,7 +92,7 @@
     flex-shrink:0;
     min-width:20%;
     width:60%;
-    height:350px;
+    max-height:300px;
     overflow:hidden;
     margin:10px 20px ;
     padding:0 0;
@@ -185,10 +185,10 @@
     width:40vw;
     /* grid-template-columns: masonry; */
     grid-template-columns: repeat(5, 1fr);
-    margin:0 15vw 20px 0;
+    margin:0 22vw 20px 0;
     grid-column-gap: 20px;
     /* padding:20px 20px 0 0; */
-    /* padding-left:0px; */
+    padding-top:20px;
     justify-content: space-evenly;
     grid-auto-flow: row;
     height:auto;
@@ -218,7 +218,7 @@
 
 .entry--title {
     font-weight:700;
-    font-size:1.8rem;
+    font-size:1.2rem;
     padding-bottom:15px;
     grid-column: span 5;
     color:var(--dark-text);
@@ -240,7 +240,7 @@
 
 .entry--text {
     font-weight:400;
-    font-size:1.5rem;
+    font-size:1rem;
     /* padding-block:20px; */
     margin: 0 0;
     padding-bottom:15px;
@@ -249,7 +249,7 @@
 
 .entry--subtitle {
     font-weight:700;
-    font-size:1.5rem;
+    font-size:1rem;
     padding:15px 0 5px 0;
     grid-column: span 5;
 }
@@ -317,7 +317,7 @@
 
     .entry--title {
         font-weight:700;
-        font-size:1.5rem;
+        font-size:1.2rem;
         padding-bottom:0px;
         grid-column: span 5;
     }
