--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -66,7 +66,7 @@
     margin-block:0;
     margin-inline:0vw;
     font-weight:400;
-    font-size:1.2rem;
+    font-size:1.1rem;
     line-height:0px;
     padding-top:5px;
     color:var(--header-dark-text);
@@ -90,7 +90,7 @@ nav {
 }
 
 h2,h3 {
-    scroll-margin-top: 60px;
+    scroll-margin-top: 15px;
 }
 
 .nav--home {
@@ -121,7 +121,7 @@ h2,h3 {
 }
 
 .nav--item-shrink {
-    font-size:1.2rem;
+    font-size:1.0rem;
     padding:10px 10px;
 }
 
